--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,70 +1,78 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Welcome to automated trading system</title>
-    <script src="js/angular-min.js"></script>
-    <script src="js/app.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+<title>Welcome to automated trading system</title>
+<script src="js/angular-min.js"></script>
+<script src="js/app.js"></script>
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body ng-app="TraderApp" ng-controller="ExchangeController">
-<h2>Welcome to automated trading system</h2>
+	<h2>Welcome to automated trading system</h2>
 
 
-<div sec:authorize="isAuthenticated()" ng-controller="getExchanges">
-    <table>
-        <thead>
-        <td>Exchange</td>
-        <td>Assign</td>
-        </thead>
-        <tbody>
-        <tr ng-repeat="exchange in exchanges">
-            <td>{{exchange.name}}</td>
-            <td>
-                <input type="button" value="assign" ng-disabled="assignment.active"  ng-click="assign(exchange.id)"/>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-    <table>
-        <tr>
-            <td>
-                <form action="/sessions">
-                    <input type="submit" value="view sessions" />
-                </form>
-            </td>
-            <td>
-                <form action="/logout" method="post" ng-if="isAnySubscription">
-                    <input type="submit" value="Logout"/>
-                </form>
-            </td>
-            <td>
-                <form sec:authorize="${hasAnyAuthority('TRADER')}" action="/trader/browse">
-                    <input type="submit" value="Go to Trader page"/>
-                </form>
-            </td>
-        </tr>
-    </table>
+	<div sec:authorize="isAuthenticated()" ng-controller="getExchanges">
+		<div class="theapp">
+			<div class="theapp-triangle"></div>
+			<p th:inline="text" class="theapp-header">Hello
+				[[${#httpServletRequest.remoteUser}]]!</p>
+			<table>
+				<thead>
+					<td>Exchange</td>
+					<td>Assign</td>
+				</thead>
+				<tbody>
+					<tr ng-repeat="exchange in exchanges">
+						<td>{{exchange.name}}</td>
+						<td><input type="button" value="assign"
+							ng-disabled="assignment.active" ng-click="assign(exchange.id)" />
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<table>
+				<tr>
+					<td>
+						<form action="/sessions">
+							<input type="submit" value="view sessions" />
+						</form>
+					</td>
+					<td>
+						<form action="/logout" method="post" ng-if="isAnySubscription">
+							<input type="submit" value="Logout" />
+						</form>
+					</td>
+					<td>
+						<form sec:authorize="${hasAnyAuthority('TRADER')}"
+							action="/trader/browse">
+							<input type="submit" value="Go to Trader page" />
+						</form>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
 
-</div>
+	<div sec:authorize="isAnonymous()" ng-controller="getExchanges">
+		<div class="theapp">
+			<div class="theapp-triangle"></div>
+			<h2 class="theapp-header">Welcome stranger</h2>
+			<table>
+				<thead>
+					<td>Exchange</td>
+					<td>Assign</td>
+				</thead>
+				<tbody>
 
-<div sec:authorize="isAnonymous()" ng-controller="getExchanges">
-    <table>
-        <thead>
-        <td>Exchange</td>
-        <td>Assign</td>
-        </thead>
-        <tbody>
-
-        <tr ng-repeat="exchange in exchanges">
-            <td>{{exchange.name}}</td>
-            <td>
-                <a href="/login">Login</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+					<tr ng-repeat="exchange in exchanges">
+						<td>{{exchange.name}}</td>
+						<td><a href="/login">Login</a></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </body>
 </html>
 
