--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,118 +1,100 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 body {
-    background: #ffffff;
-    font-family: 'Open Sans', sans-serif;
-}
-
-thead {
-    background: #5B8C9B;
-}
-
-input[type="submit"] {
-    background-color: #5B8C9B;
-    border: none;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 8px;
-}
-
-input[type="button"] {
-    background-color: #5B8C9B;
-    border: none;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 8px;
+	background-color: #900C3E;
+	font-family: monospace;
 }
 
 table {
-    display: block;
+	display: block;
 }
 
-.login {
-    width: 400px;
-    margin: 16px auto;
-    font-size: 16px;
+.theapp {
+	width: 400px;
+	margin: 16px auto;
+	font-size: 16px;
 }
 
-.login-header,
-.login p {
-    margin-top: 0;
-    margin-bottom: 0;
+.theapp-header, .theapp p {
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
-.login-triangle {
-    width: 0;
-    margin-right: auto;
-    margin-left: auto;
-    border: 12px solid transparent;
-    border-bottom-color: #5B8C9B;
+.theapp-triangle {
+	width: 0;
+	margin-right: auto;
+	margin-left: auto;
+	border: 12px solid transparent;
+	border-bottom-color: #571845;
 }
 
-.login-header {
-    background: #5B8C9B;
-    padding: 20px;
-    font-size: 1.4em;
-    font-weight: normal;
-    text-align: center;
-    text-transform: uppercase;
-    color: #fff;
+.theapp-header {
+	background: #571845;
+	padding: 20px;
+	font-size: 1.4em;
+	font-weight: normal;
+	text-align: center;
+	text-transform: uppercase;
+	color: #FFC300;
 }
 
-.login-container {
-    background: #ebebeb;
-    padding: 12px;
+.theapp-container {
+	background: #900C3E;
+	padding: 12px;
 }
 
-.login p {
-    padding: 12px;
+.theapp p {
+	padding: 12px;
 }
 
-.login input {
-    box-sizing: border-box;
-    display: block;
-    width: 100%;
-    border-width: 1px;
-    border-style: solid;
-    padding: 16px;
-    outline: 0;
-    font-family: inherit;
-    font-size: 0.95em;
+.theapp a {
+	text-align: center;
 }
 
-.login input[type="email"],
-.login input[type="password"] {
-    background: #fff;
-    border-color: #bbb;
-    color: #555;
+.theapp a:link {
+	text-decoration: none;
 }
 
-.login input[type="email"]:focus,
-.login input[type="password"]:focus {
-    border-color: #888;
+.theapp input, .theapp a {
+	box-sizing: border-box;
+	display: block;
+	width: 100%;
+	border-width: 1px;
+	border-style: solid;
+	padding: 0.7rem;
+	outline: 0;
+	font-family: inherit;
+	font-size: 0.95em;
+	color: #571845;
 }
 
-.login input[type="submit"] {
-    background: #5B8C9B;
-    border-color: transparent;
-    color: #fff;
-    cursor: pointer;
+.theapp input[type="email"], .theapp input[type="password"], .theapp a {
+	border-color: #571845;
+	color: #571845;
 }
 
-.login input[type="submit"]:hover {
-    background: #5B8C9B;
+.theapp input[type="email"]:focus, .theapp input[type="password"]:focus,
+	.theapp a:focus {
+	border-color: #C70039;
 }
 
-.login input[type="submit"]:focus {
-    border-color: #87b9e6;
+.theapp input[type="submit"], .theapp input[type="button"], .theapp a {
+	background: #571845;
+	border-color: transparent;
+	color: #FFC300;
+	cursor: pointer;
+}
+
+.theapp label {
+	color: #FFC300;
+}
+
+.theapp input[type="submit"], .theapp input[type="button"], .theapp a {
+	:hover { background:#C70039;
+	
+}
+
+.theapp input[type="submit"], .theapp input[type="button"], .theapp a {
+	:focus { border-color:#FF5733;
+	
 }
