--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>403</title>
+    <script src="/js/angular-min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
 </head>
 <body>
-    <h2>Access denied</h2>
+	<div class="trdr">
+		<div class="trdr-triangle"></div>
+		<h2 class="trdr-header">Access denied</h2>
+		<div sec:authorize="isAnonymous()">
+			<form th:action="@{/login}" method="get">
+				<p><input type="submit" value="Login"/></p>
+			</form>			
+		</div>
+		<div sec:authorize="isAuthenticated()">
+			<form th:action="@{/logout}" method="post">
+				<p><input type="submit" value="Logout"/></p>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
