--- a/src/main/resources/templates/trader/trade.html
+++ b/src/main/resources/templates/trader/trade.html
@@ -1,51 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Start Trade</title>
-    <script src="/js/angular-min.js"></script>
-    <script src="/js/app.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
+<meta charset="UTF-8" />
+<title>Start Trade</title>
+<script src="/js/angular-min.js"></script>
+<script src="/js/app.js"></script>
+<link rel="stylesheet" type="text/css" href="/css/style.css" />
 </head>
-<body ng-app="TraderApp" ng-controller="ExchangeController">
+<body ng-app="TraderApp">
 
-<div th:if="${message}">
-    <h2 th:text="${message}"/>
-</div>
-
-<div ng-controller="getExchanges">
-    <form method="POST" enctype="multipart/form-data" action="/trader/trade">
-        <table>
-            <tr>
-                <td>Exchange:</td>
-                <td><select name="exchange">
-                    <option ng-repeat="option in exchanges" value="{{option.id}}">{{option.name}}</option>
-                </select>
-                </td>
-            </tr>
-            <tr>
-                <td>Exchange credentials:</td>
-                <td><input value="Select File" type="file" name="file" accept="application/pdf"/></td>
-            </tr>
-            <tr>
-                <td>Assets:</td>
-                <td><input type="text" name="name"/></td>
-            </tr>
-            <tr>
-                <td>Limits:</td>
-                <td><input type="text" name="limits"/></td>
-            </tr>
-            <tr>
-                <td>
-                    <input type="button" value="Back" onclick="window.location.href='/trader/browse'"/>
-                </td>
-                <td><input type="submit" value="Trade"/></td>
-            </tr>
-        </table>
-    </form>
-</div>
-
-
+	<div th:if="${message}">
+		<h2 th:text="${message}" />
+	</div>
+	<div class="trdr" ng-controller="ExchangeController">
+		<div class="trdr-triangle"></div>
+		<p th:inline="text" class="trdr-header">Hello
+			[[${#httpServletRequest.remoteUser}]]!</p>
+		<div ng-controller="getExchanges" class="trdr-container">
+			<form method="POST" enctype="multipart/form-data"
+				action="/trader/trade">
+				<p th:if="${param.error}">Invalid username and password.</p>
+				<p th:if="${param.logout}">You have been logged out.</p>
+				<p><select name="exchange" placeholder="Exchange">
+					<option ng-repeat="option in exchanges" value="{{option.id}}">{{option.name}}</option>
+				</select></p>
+				<p><input value="Select File" type="file" name="file"
+					accept="application/pdf" placeholder="Exchange credentials"/></p>
+				<p><input type="text" name="name" placeholder="Assets"/></p>
+				<p><input type="text" name="limits"  placeholder="Limits"/></p>
+				<p><input type="button" value="Back"
+					onclick="window.location.href='/trader/browse'" /></p>
+				<p><input type="submit" value="Trade" /></p>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
 
