--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -14,12 +14,12 @@
 		<h2 class="trdr-header">Access denied</h2>
 		<div sec:authorize="isAnonymous()">
 			<form th:action="@{/login}" method="get">
-				<p><input type="submit" value="Login"/></p>
+				<p><input type="submit" value="Login"  class="trdr-input"/></p>
 			</form>			
 		</div>
 		<div sec:authorize="isAuthenticated()">
 			<form th:action="@{/logout}" method="post">
-				<p><input type="submit" value="Logout"/></p>
+				<p><input type="submit" value="Logout"  class="trdr-input"/></p>
 			</form>
 		</div>
 	</div>
