--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,17 +1,19 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+
 :root {
-  --bg0: #000000;
-  --bg1: #101014;
-  --bg2: #17181E;
-  --fg0: #25282C;
-  --fg1: #2B2A33;
-  --fg2: #404854;
-  --gld0: #41361D;
-  --gld1: #AE9500;
-  --gld2: #F7A600;
-  --green: #20B26C;
-  --red: #EF454A;
-  --accent: #FFFFFF;
+	--bg0: #000000;
+	--bg1: #101014;
+	--bg2: #17181E;
+	--fg0: #25282C;
+	--fg1: #2B2A33;
+	--fg2: #404854;
+	--gld0: #41361D;
+	--gld1: #AE9500;
+	--gld2: #F7A600;
+	--green: #20B26C;
+	--red: #EF454A;
+	--accent: #FFFFFF;
+	--width: 600px;
 }
 
 body {
@@ -29,9 +31,9 @@ ul.topnav {
 	background-color: var(--bg2);
 	width: 100%;
 	display: table;
-	box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	-webkit-box-sizing:border-box;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 }
 
 ul.topnav li {
@@ -40,50 +42,64 @@ ul.topnav li {
 	display: table-cell;
 	text-align: center;
 }
+
 ul.topnav li:last-child {
-  border-right: none;
+	border-right: none;
 }
+
 ul.topnav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 0;
-  text-decoration: none;
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 0;
+	text-decoration: none;
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #111;}
+ul.topnav li a:hover:not (.active ) {
+	background-color: #111;
+}
 
-ul.topnav li a.active {background-color: #04AA6D;}
+ul.topnav li a.active {
+	background-color: #04AA6D;
+}
 
-ul.topnav li.right {float: right;}
+ul.topnav li.right {
+	float: right;
+}
 
-@media screen and (max-width: 600px) {
-  ul.topnav li.right, 
-  ul.topnav li {float: none;}
+@media screen and (max-width: var(--width)) {
+	ul.topnav li.right, ul.topnav li {
+		float: none;
+	}
 }
 
 table {
 	color: var(--gld1);
 	padding: 12px;
-    table-layout: auto;
-    border-collapse: collapse;
-    width: 100%;
-}
-th, td {
-  border-bottom: 1px solid var(--bg0);
-  text-align: center;
+	table-layout: auto;
+	border-collapse: collapse;
+	width: 100%;
 }
 
-tr:nth-child(even) {background-color: var(--bg2);}
+th, td {
+	border-bottom: 1px solid var(--bg0);
+	text-align: center;
+}
+
+tr:nth-child(even) {
+	background-color: var(--bg2);
+}
 
 .trdr {
-	width: 600px;
+	width: var(--width);
 	margin: 16px auto;
 	font-size: 14px;
 }
+
 .trdr p {
 	color: var(--gld2);
 }
+
 .trdr-header, .trdr p {
 	margin-top: 0;
 	margin-bottom: 0;
@@ -104,7 +120,7 @@ tr:nth-child(even) {background-color: var(--bg2);}
 	font-weight: normal;
 	text-align: center;
 	text-transform: none;
-	color: var(--gld1);
+	color: var(--gld2);
 }
 
 .trdr-container {
@@ -139,60 +155,53 @@ tr:nth-child(even) {background-color: var(--bg2);}
 	text-decoration: none;
 }
 
-.trdr input[type="email"], .trdr input[type="password"], .trdr input[type="text"], .trdr input[type="file"], .trdr select, .trdr label, .trdr a {
-	background: var(--fg2);
-	border-color: transparent;
-	color: var(--gld2);
-}
-
-.trdr input:focus, .trdr select:focus, .trdr label:focus {
-	border-color: var(--gld0);
-}
-
-.trdr input[type="submit"], .trdr input[type="button"], .trdr a {
-	background: var(--fg1);
-	border-color: transparent;
-	color: var(--gld1);
-	cursor: pointer;
-}
-
 .trdr label {
 	color: var(--accent);
 }
+
 .trdr-browse {
 	position: relative;
 	width: 96%;
- 	left: 2%;
- 	height: 40px;
- 	border-color: transparent;
+	left: 2%;
+	height: 40px;
+	border-color: transparent;
 }
+
 .trdr-btn-browse {
 	position: absolute;
 	z-index: 1;
 	cursor: pointer;
 	top: 0;
-	left:0;
-	width:100%;
+	left: 0;
+	width: 100%;
 	height: 39px;
 }
 
 .trdr input[type="file"] {
 	position: absolute;
-	-moz-opacity:0 ;
+	-moz-opacity: 0;
 	opacity: 0;
 	z-index: 2;
 	cursor: pointer;
 	top: 0;
-	left:0;
-	width:100%;
-	filter: alpha(opacity=0);
+	left: 0;
+	width: 100%;
+	filter: alpha(opacity = 0);
 	height: 39px;
 }
 
-.trdr input[type="submit"], .trdr input[type="button"], .trdr a {
-	:hover { background:var(--accent);
+.trdr input, .trdr select, .trdr label, .trdr a {
+	background: var(--fg1);
+	border-color: transparent;
+	color: var(--gld2);
+	cursor: pointer;
 }
 
-.trdr input[type="submit"], .trdr input[type="button"], .trdr a {
-	:focus { border-color:var(--gld0);
+.trdr input:hover, .trdr select:hover, .trdr label:hover, .trdr a:hover { 
+	background:var(--fg2);
+	color:var(--accent);
+}
+
+.trdr input:focus, .trdr select:focus, .trdr label:focus, .trdr a:focus {
+	border-color:var(--gld1);
 }
